--- a/index.html
+++ b/index.html
@@ -22,12 +22,30 @@
 
 <div class="app">
   <section class="main"></section>
+
+  <div class="arrows__wrap">
+    <style>
+      .arrows__wrap {
+        position: absolute;
+        top: 135px;
+        left: 50%;
+        margin-left: -56px;
+      }
+      .arrows__btn {
+        background: none;
+        border: 2px solid black;
+        padding: 5px 20px;
+      }
+    </style>
+    <button class="arrows__btn arrows__btn--left"><-</button>
+    <button class="arrows__btn arrows__btn--right">-></button>
+  </div>
 </div>
 
 <template id="templates">
 
   <!-- Приветствие -->
-  <section class="main main--welcome">
+  <section class="main main--welcome js-main--welcome">
     <section class="logo" title="Угадай мелодию"><h1>Угадай мелодию</h1></section>
     <button class="main-play">Начать игру</button>
     <h2 class="title main-title">Правила игры</h2>
@@ -39,7 +57,7 @@
   </section>
 
   <!-- Игра на выбор жанра -->
-  <section class="main main--level main--level-genre">
+  <section class="main main--level main--level-genre js-main--level-genre">
     <svg xmlns="http://www.w3.org/2000/svg" class="timer" viewBox="0 0 780 780">
       <circle
         cx="390" cy="390" r="370"
@@ -123,7 +141,7 @@
   </section>
 
   <!-- Игра на выбор исполнителя -->
-  <section class="main main--level main--level-artist">
+  <section class="main main--level main--level-artist js-main--level-artist">
     <svg xmlns="http://www.w3.org/2000/svg" class="timer" viewBox="0 0 780 780">
       <circle
         cx="390" cy="390" r="370"
@@ -184,7 +202,7 @@
   </section>
 
   <!-- Результат игры: выигрыш -->
-  <section class="main main--result">
+  <section class="main main--result js-main--result-win">
     <section class="logo" title="Угадай мелодию"><h1>Угадай мелодию</h1></section>
 
     <h2 class="title">Вы настоящий меломан!</h2>
@@ -196,7 +214,7 @@
   </section>
 
   <!-- Результат игры: проигрыш время вышло -->
-  <section class="main main--result">
+  <section class="main main--result main--result-time-over js-main--result-time-over">
     <section class="logo" title="Угадай мелодию"><h1>Угадай мелодию</h1></section>
 
     <h2 class="title">Увы и ах!</h2>
@@ -205,7 +223,7 @@
   </section>
 
   <!-- Результат игры: проигрыш закончились попытки -->
-  <section class="main main--result">
+  <section class="main main--result js-main--result-attempts-end">
     <section class="logo" title="Угадай мелодию"><h1>Угадай мелодию</h1></section>
 
     <h2 class="title">Какая жалость!</h2>
@@ -214,5 +232,6 @@
   </section>
 </template>
 
+<script src="js/main.js"></script>
 </body>
 </html>
